# ChangeLog for dev-ruby/json
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/json/ChangeLog,v 1.132 2013/09/01 14:46:01 ago Exp $

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> json-1.8.0.ebuild:
  Stable for x86, wrt bug #483254

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> json-1.8.0.ebuild:
  Stable for amd64, wrt bug #483254

  07 Jul 2013; Hans de Graaff <graaff@gentoo.org> json-1.8.0.ebuild:
  Add ruby20 support.

*json-1.8.0 (30 Jun 2013)

  30 Jun 2013; Hans de Graaff <graaff@gentoo.org> +json-1.8.0.ebuild:
  Version bump.

  30 Jun 2013; Hans de Graaff <graaff@gentoo.org> -json-1.6.7.ebuild,
  -json-1.7.6.ebuild:
  Cleanup.

  14 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for sh, wrt bug #464366

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for s390, wrt bug #464366

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for sparc, wrt bug #464366

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for ia64, wrt bug #464366

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for alpha, wrt bug #464366

  11 Apr 2013; Jeroen Roovers <jer@gentoo.org> json-1.7.7.ebuild:
  Stable for HPPA (bug #464366).

*json-1.7.7-r1 (09 Apr 2013)

  09 Apr 2013; Hans de Graaff <graaff@gentoo.org> +json-1.7.7-r1.ebuild:
  Respect user CFLAGS, bug 464716.

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for arm, wrt bug #464366

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for ppc64, wrt bug #464366

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for ppc, wrt bug #464366

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for x86, wrt bug #464366

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> json-1.7.7.ebuild:
  Stable for amd64, wrt bug #464366
