@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST json-1.6.8.gem 144384 SHA256 2c66ad4038eb4a0823ee8c2d8f0a4cbf66991011b031aab0d22ded2ca75e7708 SHA512 9e63f5d3a85f6bdb93ff15b40aac4ad7d576f801ba9acb0401e87e27485f62f66209cab096131d92fa4bb015cfe2ff72cfffa632b4ff45542b402ab687d12a3c WHIRLPOOL 364cb032ab3ea62f491858d5ae9d2cd49cc51d5b4ffb0512496dd282a127da65dd154a0fcacd0e76b39c7bf9bb46e93d7fdbcde6f40a7a90e5c3bf876654cd96
 DIST json-1.7.7.gem 148480 SHA256 fd702ed46565b354d7508e88bb3c4855f7fdd771ab89435d7ecbbe98deb0b7ec SHA512 b73cc6427854b00fecc36fb6a3da89562b9ef352342d2766da7c22a9311620c12090d84704b9dda9ca35da5893676f1c1b2ced53ca06da27194230825f73b7e8 WHIRLPOOL 29c4a581c60a2311ac77eaec278bb123be18f4c6acac23d286e3116a8a84df3ae5089be0116827e579f5460b803cf3d8066cb8ff9c298a4b045e67c473c0d431
@@ -7,23 +7,14 @@ DIST json-1.8.0.gem 148992 SHA256 87e49cccff3fb2091c53141a605956e8d9a252cda43128
 EBUILD json-1.6.8.ebuild 1982 SHA256 01a927c37523bd075c784d23dd220eb441a624edd5dba105c9f77df4faa9a25e SHA512 47a4110ebeb74eb0af0f6125aacf6d36a71f299f0eef1a432299454e99bbe553ace49d6ac1922357b439c82675022ca0240f78441db4d60153dbb3f0db05bdc2 WHIRLPOOL 95ff7f0cdcee79650695b35dac919146869b67319ec61199046f3059cd1a9667c4489e1fb2959c0967e7f88cdd0500aa3e8a479aa89b6e3dfde27731df958fab
 EBUILD json-1.7.7-r1.ebuild 2146 SHA256 d45278d30740b3cefff705740f7fb954e20bb2d13e80f712f6e9f64157102407 SHA512 f48a9f528be1328a64b8c12cd4de74ecc050bb8458e764d18c246f650c762602fd332686f660fbfbc717b95c8a588f2e339dbd1059fb86b2697bbaadaa999781 WHIRLPOOL 7db21419888209353d8bbb3a2846a81384f89387e0f2503834b90dab86b9ccd8aee4e0c03a94df5df918e76a42fbcbe08305ef980cda274a0dc9cff79266fb0f
 EBUILD json-1.7.7.ebuild 1994 SHA256 1029fc804a2be258dad78a72143e12f97d871f859d7ae673bdea2587c00fef70 SHA512 83595f04a4eb7da1c7d3fa79dfa0e698e7458f8a6a00f728459f81b2c551ba8c484876f2155357d2a9fd84fc5b140d419608cac011fefdf5a68c5552155d839f WHIRLPOOL f44f2eb684c5695510cec499099274c654779e1befa75194d2609b5b098dbedf3fe420dfaa3ed1625c5401685380aa523c92e34d5143c0798465b0ab5039cc51
+EBUILD json-1.8.0-r1.ebuild 2170 SHA256 63b00c43687f3f144e38a07731bbb2fea2774051ce5c344f8d536185f93c9862 SHA512 2d058d6531a561ffaf233d9155111462fde5668029ab695e1170445798d2b1b6929c1169c68c8e20fbf6481a6fad17355f9ee81adb3822985a8a69ff69e5b2b7 WHIRLPOOL 12f1d4b95bc23a8077a5bb7707d86063b3c8f4e47f8a234166d53e4922c2aa140018cb4105146298c5dc3329c5a51d5039f0d2c06d9b14f7025882c880ba848c
 EBUILD json-1.8.0.ebuild 2145 SHA256 314e8d8833d947db8d1a6432079e1b14c43dec57ca9a40ef115ea04861b89667 SHA512 d791e4bbf0a29f330feb73e1b717c18fe6e0a2c2ba36d7092479c182061fed76ada70b5870c97702c7593e92996bb901b88e0740346cf5c408a6ee79bfa6e22e WHIRLPOOL b88dbbf3614105e56949eaad8d44a82c2a6f36b69e5d21bead6a24a320ceeadffa4b4450d9404df71a479c07022cfe40542af94df25df0379a72132b075fe06d
-MISC ChangeLog 16314 SHA256 1f5bcca33e620e2c6cfb1e16de22730b00b1f57ff2420780d6ad4fccdd5635de SHA512 0ff494d1305f3752e8f2c2f329f36aa621f2025f508a3fc717fcf2d38e46e3309a5944da834ba7adbf78ee0282583950c291d410b63a01728fb2d7d4a1f7869c WHIRLPOOL 0d0287b75dcbde0a79354691a20347dfa1e1a9d2516dffde1bc27e7d49170954af6646326d81afec44095c77db1630489be6feb4299bbe8ba745c82b7fbd539c
+MISC ChangeLog 16500 SHA256 ba841af07c60613aaf2e6774097dff2eba17cf2c8ce72a848921e5773385cffc SHA512 e85b1937555c9928506b407d93498ebdf5fd48a0d15ccb800ed352b94877599f87c2eac07fc4026abb2a93d7ff513c10b17f44fe10704b866e1f0a98ed563f6d WHIRLPOOL d68818695ea189b006017f62482b4bbc0735b191be74e7e95ada77f3a13a9428933c930be634720486115b9dc4f7e26cbcf7c512219796ac007239f8e40d0173
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSI1MqAAoJELp701BxlEWfXtQP/j+YT91jSK6o3GQqL7gNxpov
-tmocXRDppVRTJYRsgy7V0hUHZK5EBviUMWNoCFsb3qhGQwxDbMmi636E+wk1iDrv
-DYOBKWkB4IIhWpVOlBxB+NZtV7pvn8AcOY2XgJpWeerY0U98qu4w9gXuH46J0E5N
-sLzAAbbscc8Kdrj94Zsr3aktIX43hQ3w4xXtV6Ft3+oJh4Ors5HKYh74iP157tke
-GYG4OqZACmS9Pce7jUm7/7CZTigsmo3ZHYPEKrPcVK35SjAo0W01yIN/TsbV0trK
-aQTCo0RuHD0nbyq35MTzAW7LjMgjXwgGo04TQXYME4GhMKDXS3eQJTdLcuJxyvX1
-EPRgIrCUKcZ5OeVkybAXRursuieBsRU3GQmuM7nlFqP2h3bHzq8lQkGzBavxy8ij
-23vMj5yx/V7sFWwVEFd4ncKVIEsBx5h/K/jmNZ4yvlwOsd9hfSK/MyUsdfGKwVjp
-BCrGJhhpwLmRr28tfPYEgr5wmvw5+qv6V9riugGEsbmgOpGPe5yVg/biMOg4dpa1
-AVwBVLalfKxRqO3A5B2kUOD6d7OrXjP93yszsRxwJXI8psAFqRmguu0DrcNU9Se9
-V2Tzo1PZKme7Iai8IFGzcvAEFxLz7b+FgSzZM0l0SF5yGR2FDMA6b/zMllRtcREq
-pHoZ8FwQRXHtrzWwYJUR
-=ilex
+iF4EAREIAAYFAlIk0OgACgkQiIP6VqMIqNeBLgD+NNzFH2SKJ2RlzhdqrsCjarK8
+U6EzZ1Irm5Lex9nslhUA/1aD5XP07Gnpw615+nlaBcpq0WHUIqV30kBuqI4tQsz8
+=wWtz
 -----END PGP SIGNATURE-----
